@@ -1,14 +1,14 @@
 Package: Tariff
 Type: Package
 Title: Replicate Tariff Method for Verbal Autopsy
-Version: 1.0.4
-Date: 2018-08-28
+Version: 1.0.5
+Date: 2018-10-23
 Author: Zehang Li, Tyler McCormick, Sam Clark
 Maintainer: Zehang Li <lizehang@uw.edu>
 Description: Implement the Tariff algorithm for coding cause-of-death from verbal autopsies. The Tariff method was originally proposed in James et al (2011) <DOI:10.1186/1478-7954-9-31> and later refined as Tariff 2.0 in Serina, et al. (2015) <DOI:10.1186/s12916-015-0527-9>. Note that this package was not developed by authors affiliated with the Institute for Health Metrics and Evaluation and thus unintentional discrepancies may exist between the this implementation and the implementation available from IHME.
 License: GPL-2
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 NeedsCompilation: no
-Packaged: 2018-08-28 20:11:44 UTC; zehangli
+Packaged: 2018-10-23 21:47:24 UTC; zehangli
 Repository: CRAN
-Date/Publication: 2018-08-28 20:44:26 UTC
+Date/Publication: 2018-10-29 05:40:08 UTC
