@@ -1,16 +1,16 @@
-f4598e3fe2bccec5b4433b0124e76a75 *DESCRIPTION
+c2dcfa389de1451a6fc3290b7c8694d1 *DESCRIPTION
 a85052562d3354fe44e27c19916873a9 *NAMESPACE
 606f9584bc04ab4234b02a85b203f675 *R/Tariff.plot.r
-19e99808a12439d4adf533596b875ebd *R/Tariff.r
+0492d8ae0e984dfb77c6c0b1cee6240e *R/Tariff.r
 5709ecbe04197597a8eaa0cdec11e0ea *R/Tariff_1.0-package.R
 2d8a7eeba786cdfee26f9c8ff3c2a80b *R/Tarrif.summary.r
 e719d8126b9f3e205171eea6f9f0663c *R/zzz.R
 6853991ca78eec2e09d5a5e70b059660 *data/RandomVA3.rda
 e75766fc7dbb1a0b2abef235d74bd1b8 *data/SampleCategory3.rda
-0dc14068e0f75977d91cad0b0ecd57e6 *inst/NEWS.Rd
+b62c7b3438dbf217ecfb39c026223b1e *inst/NEWS.Rd
 2b021eb05092616beb7667b35ef044aa *man/RandomVA3.Rd
 0d05c1a19da48435af93519c2c9261c3 *man/SampleCategory3.Rd
 0b26669b1089ac59109a87c9a70bcc17 *man/plot.tariff.Rd
 2420f383aec41f11ff6a4bf2d5c13d42 *man/print.tariff_summary.Rd
 4db6774bb712a8f1cb25bdc869928dab *man/summary.tariff.Rd
-4dcf4674037374b1142328a41c5f4156 *man/tariff.Rd
+bc3797e7430b099f9d5a7f37ee6a2d83 *man/tariff.Rd
